Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3430,7 +3430,7 @@ input, select, textarea {
 }
 
 .skill-category h4 {
-	border-bottom: 2px solid #316ff6;
+	border-bottom: 1px solid #316ff6;
     margin-left: 20px;
 	margin-right: 20px;
 	margin-bottom: 1px;
@@ -3791,6 +3791,25 @@ input, select, textarea {
         font-size: 10px;
     }
 
+}
+
+#back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none; /* Hidden by default */
+    background-color: #007bff; /* Blue background */
+    color: white; /* White text */
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#back-to-top:hover {
+    background-color: #0056b3; /* Darker blue on hover */
 }
 
 /* Add some padding to sections to avoid content being hidden behind the navbar */
